# wasmtime-example

./: Cargo.toml  README.md  test-debug-print.wat
src/: lib.rs  main.rs  system_api.rs  wasi_caller_memory.rs
