[package]
name = "wasmtime-example"
version = "0.1.0"
authors = ["Krzysztof Woś <krzysztof.wos@pm.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.22"
cranelift-codegen = "0.56.0"
cranelift-entity = "0.56.0"
structopt = "0.3.4"
target-lexicon = "0.10.0"
wabt = "0.9.2"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "47d6db0be83fa558c407d4da9f5f2b3a593ce12d" }
wasmtime-environ = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "47d6db0be83fa558c407d4da9f5f2b3a593ce12d" }
wasmtime-runtime = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "47d6db0be83fa558c407d4da9f5f2b3a593ce12d" }
