[package]
name = "wasmtime-example"
version = "0.12.0"
authors = ["Krzysztof Woś <krzysztof.wos@pm.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.22"
cranelift-codegen = "0.56.0"
cranelift-entity = "0.56.0"
structopt = "0.3.4"
target-lexicon = "0.10.0"
wabt = "0.9.2"
wasmtime = "0.12.0"
wasmtime-environ = "0.12.0"
wasmtime-runtime = "0.12.0"
